Issue #2330 Improve using freeplane.sh on mac